--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
     background-color: #222;
     color: #eee;
@@ -24,17 +29,17 @@ body {
   }
   
   form {
-    margin-top: 50px;
+    margin-top: 5px;
   }
   
   h1 {
-    margin-top: 50px;
+    margin-top: 5px;
   }
   
   .input-group {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
   
   .input-group .required {
@@ -117,7 +122,7 @@ body {
     color: #eee;
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 10px;
     position: fixed;
     bottom: 0;
     right: 0;
