--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ body {
   
     /* Ajustar margen del contenedor */
     .contenedor {
-      max-width: 90%;
-      margin: 0;
+      max-width: 100%;
+      margin: 20px;
     }
   
     /* Ajustar margen del formulario */
