--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     background-color: #222;
     color: #eee;
     font-family: Arial, sans-serif;
-    display: none;
   }
   
 
@@ -31,6 +30,24 @@ body {
     right: 5%;
   }
 
+  @media screen and (max-width:768px) {
+    header{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      flex-direction: column;
+      flex-wrap: wrap;
+        }
+
+        .dolar{
+          margin-top: 20px;
+          position: relative;
+          
+
+        }
+  }
+
   /* Estilos para la tabla */
 #dolar-table {
   border-collapse: collapse;
@@ -51,8 +68,6 @@ body {
   
   font-weight: bold;
 }
-
-
 
 #dolar-table tbody tr:hover {
   background-color: #070707;
@@ -186,11 +201,11 @@ body {
   }
 
   #tabla-prestamos {
-    border-collapse: collapse;
     margin-top: 20px;
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
+    margin: auto;
   }
   
   #tabla-prestamos th,
